changes in readme

--- a/client/my-app/src/app/components/footer/footer.component.html
+++ b/client/my-app/src/app/components/footer/footer.component.html
@@ -1,31 +1,26 @@
 <footer>
     <div class="container-fluid">
         <nav class="pull-left">
-            <!--<ul>
+            <ul>
                 <li>
-                    <a href="#">
+                    <a href="/">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Company
+                    <a href="http://go/dialogflowgcpdemo">
+                        go/dialogflowgcpdemo
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Portfolio
+                    <a href="https://github.com/savelee/kube-django-ng">
+                        Source Code
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                       Blog
-                    </a>
-                </li>
-            </ul>-->
+            </ul>
         </nav>
         <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} <a href="http://www.leeboonstra.com">Lee Boonstra</a>
+            &copy; {{test | date: 'yyyy'}} <a href="http://www.leeboonstra.com">@leeboonstra</a>
         </p>
     </div>
 </footer>
