--- a/front-end/src/app/my-nav/my-nav.component.html
+++ b/front-end/src/app/my-nav/my-nav.component.html
@@ -5,8 +5,7 @@
       <a mat-list-item routerLink="/balance">Balance</a>
       <a mat-list-item routerLink="/transfer">Transfer</a>
       <a mat-list-item routerLink="/support">Support</a>
-      <a mat-list-item href="/assets/html/faq/faq.html">FAQ</a>
-      
+      <a mat-list-item routerLink="/faq">FAQ</a>
     </mat-nav-list>
     <mat-toolbar class="mat-elevation-z4">Admin</mat-toolbar>
     <mat-nav-list>
@@ -27,7 +26,6 @@
       </button>
       <span>The Bank of the Future</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
 
     <router-outlet></router-outlet>
 
