fix broken nginx proxy

--- a/front-end/src/app/faq/faq.component.html
+++ b/front-end/src/app/faq/faq.component.html
@@ -4,38 +4,40 @@
     <mat-card class="transfer-card">
     <mat-card-content class="transfer-content">
     
-      <h3>When was the Future Bank formed?</h3>
-      <p>The Future Bank is a conceptional demo project. If Google were to start a bank, what would it look like?</p>
+    <dl id="faq">
 
-      <h3>Is this website real?</h3>
-      <p>No, it isn't. The Future Bank is a conceptional demo project. If Google were to start a bank, what would it look like?</p>
+      <dt>When was the Future Bank formed?</dt>
+      <dd>The Future Bank is a conceptional demo project. If Google were to start a bank, what would it look like?</dd>
+
+      <dt>Is this website real?</dt>
+      <dd>No, it isn't. The Future Bank is a conceptional demo project. If Google were to start a bank, what would it look like?</dd>
 
 
-      <h3>What are your opening hours?</h3>
-      <p>
+      <dt>What are your opening hours?</dt>
+      <dd>
           We are open Monday-Friday, from 8am-8pm, and Saturday from 8am-4pm, excluding bank holidays.
-      </p>
+      </dd>
 
-      <h3>How many people work at the Future Bank?</h3>
-      <p>
+      <dt>How many people work at the Future Bank?</dt>
+      <dd>
         Over 80.000 employees work for the Future Bank
-      </p>
+      </dd>
 
-      <h3>My credit card has been lost or stolen. Who do I contact?</h3>
-      <p>
+      <dt>My credit card has been lost or stolen. Who do I contact?</dt>
+      <dd>
         Don’t worry. Just call us immediately and we’ll take care of it. 
-      </p>
+      </dd>
 
-      <h3>How do I apply for a job at the Future Bank? </h3>
-      <p>
+      <dt>How do I apply for a job at the Future Bank? </dt>
+      <dd>
           Once you've found a job you want to apply for, click the APPLY button near the top of the job description.
           Just upload your resume, fill out the form, review, and submit it.
-      </p>
+      </dd>
 
-      <h3>Who created this awesome demo?</h3>
-      <p>Lee Boonstra. She is a customer engineer at Google, at the Google Cloud team where she assist the sales team with technical knowledge for the financial industry.</p>
+      <dt>Who created this awesome demo?</dt>
+      <dd>Lee Boonstra. She is a customer engineer at Google, at the Google Cloud team where she assist the sales team with technical knowledge for the financial industry.</dd>
 
-
+    </dl>
 
     </mat-card-content>
 </mat-card>
