--- a/front-end/src/app/my-nav/my-nav.component.html
+++ b/front-end/src/app/my-nav/my-nav.component.html
@@ -5,14 +5,12 @@
       <a mat-list-item routerLink="/balance">Balance</a>
       <a mat-list-item routerLink="/transfer">Transfer</a>
       <a mat-list-item routerLink="/support">Support</a>
-      <a mat-list-item routerLink="/faq">FAQ</a>
+      <a mat-list-item routerLink="/faq/faq.html">FAQ</a>
     </mat-nav-list>
     <mat-toolbar class="mat-elevation-z4">Admin</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/my-dashboard">My Dashboard</a>
     </mat-nav-list>
-
-
 
   </mat-sidenav>
   <mat-sidenav-content>
