--- a/front-end/src/app/transfer/transfer.component.html
+++ b/front-end/src/app/transfer/transfer.component.html
@@ -9,7 +9,40 @@
       </mat-card-header>
       <mat-card-content class="transfer-content">
       
-        TODO
+        <mat-tab-group>
+          <mat-tab label="Form">
+
+            <p class="form">
+                FORM TODO
+            </p>
+
+          </mat-tab>
+          <mat-tab label="Upload Receipt">
+            <p>Upload a receipt as PDF or JPG.</p>
+    
+            <div class="center">
+              <file-drop headertext="Drop files here" (onFileDrop)="dropped($event)" 
+              (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+              </file-drop>
+
+
+              <div class="upload-table">
+                  <table class="table">
+                      <thead>
+                          <tr>
+                              <th>Name</th>
+                          </tr>
+                      </thead>
+                      <tbody class="upload-name-style">
+                          <tr *ngFor="let item of files; let i=index">
+                              <td><strong>{{ item.relativePath }}</strong></td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+            </div>
+          </mat-tab>
+        </mat-tab-group>
 
       </mat-card-content>
   </mat-card>
