--- a/front-end/src/app/my-nav/my-nav.component.html
+++ b/front-end/src/app/my-nav/my-nav.component.html
@@ -3,13 +3,14 @@
     <mat-toolbar class="mat-elevation-z4">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/balance">Balance</a>
-      <a mat-list-item routerLink="/transfer">Transfer</a>
       <a mat-list-item routerLink="/support">Support</a>
       <a mat-list-item routerLink="/faq/faq.html">FAQ</a>
     </mat-nav-list>
     <mat-toolbar class="mat-elevation-z4">Admin</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/my-dashboard">My Dashboard</a>
+      <a mat-list-item routerLink="/admin-test">Test Environment</a>
+      <a mat-list-item routerLink="/admin-config">Configuration</a>
+      <a mat-list-item routerLink="/admin-dashboard">Realtime Dashboard</a>
     </mat-nav-list>
 
   </mat-sidenav>
