Update angular to version 7.2

--- a/front-end/src/app/my-nav/my-nav.component.html
+++ b/front-end/src/app/my-nav/my-nav.component.html
@@ -21,7 +21,7 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon aria-label="Side nav menu toggle icon">menu</mat-icon>
       </button>
       <span>The Bank of the Future</span>
     </mat-toolbar>
