--- a/front-end/src/app/admin-test/admin-test.component.scss
+++ b/front-end/src/app/admin-test/admin-test.component.scss
@@ -15,3 +15,11 @@ iframe {
     width: 100%;
     border: none;
 }
+
+.mat-header-cell {
+    font-size: 16px;
+}
+
+.difftable {
+    width: 100%;
+}
