Display userphrases for intents

--- a/front-end/src/app/admin-test/admin-test.component.scss
+++ b/front-end/src/app/admin-test/admin-test.component.scss
@@ -23,3 +23,13 @@ iframe {
 .difftable {
     width: 100%;
 }
+
+.mat-red {
+    background: red;
+    color: #fff;
+}
+
+.mat-green {
+    background: green;
+    color: #fff;
+}
