--- a/front-end/src/app/admin-test/admin-test.component.html
+++ b/front-end/src/app/admin-test/admin-test.component.html
@@ -4,48 +4,72 @@
     <mat-card class="transfer-card">
     <mat-card-content class="transfer-content">
       
-      <h2>Deploy Dev to Acceptance</h2>
+      <h2>Deploy Environments</h2>
       <p>
         Deploy Dev version on Acceptance.
         Download the latest Dialogflow agent <b>Dev</b> version, to run unit tests
         on the intents.
       </p>
-      <button mat-raised-button color="primary" (click)="onClickDeployDevtoTest($event, item)">Deploy Dev to Acceptance</button>
-      
+      <button mat-raised-button color="primary" (click)="onClickDeployDevtoTest($event)">Deploy Dev to Test</button>
+      <p>
+        Deploy to Production or Rollback:
+      </p>
+      &nbsp;
+      <button mat-raised-button color="red" (click)="onClickRollback($event)">Rollback Production to Test</button>
+      &nbsp;
+      <button mat-raised-button color="red" (click)="onClickRollbackDev($event)">Rollback Dev to Test</button>
+      &nbsp; | &nbsp;
+      <button mat-raised-button color="green" (click)="onClickDeployTesttoProd($event)">Deploy Test to Production</button>
+      <p></p>
       <hr>
 
       <h2>Get all agent changes</h2>
       <p>
         Display the differences between current <b>Dev</b> and latest <b>Test</b> version.
+        You will need to deploy the Dev environment to Test first.
       </p>
-      <button mat-raised-button color="primary" (click)="onClickRunDiff($event, item)">Run Diff</button>
+      <button mat-raised-button color="primary" (click)="onClickRunDiff($event)">Run Diff</button>
       
       <table mat-table [dataSource]="changes" class="difftable">
         <ng-container matColumnDef="name1">
-          <th mat-header-cell *matHeaderCellDef> File </th>
-          <td mat-cell *matCellDef="let changes"> {{ changes.name1 }} </td>
+          <th mat-header-cell *matHeaderCellDef>File</th>
+          <td mat-cell *matCellDef="let item">{{item.name1 }}</td>
         </ng-container>
       
         <ng-container matColumnDef="relativePath">
-            <th mat-header-cell *matHeaderCellDef> Path </th>
-            <td mat-cell *matCellDef="let changes"> {{changes.relativePath}} </td>
+            <th mat-header-cell *matHeaderCellDef>Path</th>
+            <td mat-cell *matCellDef="let item">{{item.relativePath}}</td>
           </ng-container>
 
         <ng-container matColumnDef="type2">
-          <th mat-header-cell *matHeaderCellDef> State </th>
-          <td mat-cell *matCellDef="let changes"> {{changes.type2}} </td>
+          <th mat-header-cell *matHeaderCellDef>State</th>
+          <td mat-cell *matCellDef="let item">{{item.type2}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let item">
+            <div *ngIf="item.relativePath == '/intents'">
+              <button mat-raised-button color="primary" (click)="onClickLoadUserPhrases($event, item)">Load user phrases</button>
+            </div>
+          </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="diffCols"></tr>
         <tr mat-row *matRowDef="let row; columns: diffCols;"></tr>
       </table>
 
-  
+      <h2>User Phrases</h2>
+      <ul>
+          <li *ngFor="let phrase of userphrases">
+            {{ phrase }}
+          </li>
+      </ul>
       <hr>
       
       <h2>Test agent</h2>
       <p>
-        Create unit tests, to run on diff.
+        Create unit tests, to run on diff. 
       </p>
       <button mat-raised-button color="primary" type="submit">Run unit tests</button>
       
@@ -53,18 +77,7 @@
         Run regression tests.
       </p>
       <button mat-raised-button color="primary" type="submit">Run regression tests</button>
-      <hr>
-      
-      <h2>Deploy agent</h2>
-      <p>
-        Deploy Dev to Production or rollback
-      </p>
-      <button mat-raised-button color="primary" (click)="onClickDeployTesttoProd($event, item)">Deploy Test to Production</button>
-      &nbsp;
-      <button mat-raised-button color="primary" (click)="onClickRollback($event, item)">Rollback Production to Acceptance</button>
-      &nbsp;
-      <button mat-raised-button color="primary" (click)="onClickRollbackDev($event, item)">Rollback Dev to Test</button>
-
+    
     </mat-card-content>
 </mat-card>
 
