--- a/front-end/src/app/my-nav/my-nav.component.html
+++ b/front-end/src/app/my-nav/my-nav.component.html
@@ -24,8 +24,10 @@
         <mat-icon aria-label="Side nav menu toggle icon">menu</mat-icon>
       </button>
       <span>The Bank of the Future</span>
-    </mat-toolbar>
 
+      <app-login></app-login>
+
+    </mat-toolbar>
     <router-outlet></router-outlet>
 
   </mat-sidenav-content>
