--- a/front-end/src/app/admin-test/admin-test.component.html
+++ b/front-end/src/app/admin-test/admin-test.component.html
@@ -1,142 +1,148 @@
 <div class="grid-container">
   <h1 class="mat-h1">Acceptance Dashboard</h1>
-
     <mat-card class="transfer-card">
     <mat-card-content class="transfer-content">
-      
-      <h2>Deploy Environments</h2>
-      <p>
-        Deploy Dev version on Acceptance.
-        Download the latest Dialogflow agent <b>Dev</b> version, to run unit tests
-        on the intents.
-      </p>
-      <button mat-raised-button color="primary" (click)="onClickDeployDevtoTest($event)">Deploy Dev to Test</button>
-      <p>
-        Deploy to Production or Rollback:
-      </p>
-      &nbsp;
-      <button mat-raised-button color="red" (click)="onClickRollback($event)">Rollback Production to Test</button>
-      &nbsp;
-      <button mat-raised-button color="red" (click)="onClickRollbackDev($event)">Rollback Dev to Test</button>
-      &nbsp; | &nbsp;
-      <button mat-raised-button color="green" (click)="onClickDeployTesttoProd($event)">Deploy Test to Production</button>
-      <p></p>
-      <hr>
+        
+      <ng-template #login>
+        You will need to be logged in.
+      </ng-template>
 
-      <h2>Get all agent changes</h2>
-      <p>
-        Display the differences between current <b>Test</b> and latest <b>Dev</b> version.
-        You will need to deploy the Dev environment to Test first.
-      </p>
-      <button mat-raised-button color="primary" (click)="onClickRunDiff($event)">Run Diff</button>
-      
-      <table mat-table [dataSource]="changes" class="difftable">
-        <ng-container matColumnDef="name1">
-          <th mat-header-cell *matHeaderCellDef>File</th>
-          <td mat-cell *matCellDef="let item">{{item.name1 }}</td>
-        </ng-container>
-      
-        <ng-container matColumnDef="relativePath">
-            <th mat-header-cell *matHeaderCellDef>Path</th>
-            <td mat-cell *matCellDef="let item">{{item.relativePath}}</td>
+      <div *ngIf="loggedIn;else login">
+
+        <h2>Deploy Environments</h2>
+        <p>
+          Deploy Dev version on Acceptance.
+          Download the latest Dialogflow agent <b>Dev</b> version, to run unit tests
+          on the intents.
+        </p>
+        <button mat-raised-button color="primary" (click)="onClickDeployDevtoTest($event)">Deploy Dev to Test</button>
+        <p>
+          Deploy to Production or Rollback:
+        </p>
+        &nbsp;
+        <button mat-raised-button color="red" (click)="onClickRollback($event)">Rollback Production to Test</button>
+        &nbsp;
+        <button mat-raised-button color="red" (click)="onClickRollbackDev($event)">Rollback Dev to Test</button>
+        &nbsp; | &nbsp;
+        <button mat-raised-button color="green" (click)="onClickDeployTesttoProd($event)">Deploy Test to Production</button>
+        <p></p>
+        <hr>
+
+        <h2>Get all agent changes</h2>
+        <p>
+          Display the differences between current <b>Test</b> and latest <b>Dev</b> version.
+          You will need to deploy the Dev environment to Test first.
+        </p>
+        <button mat-raised-button color="primary" (click)="onClickRunDiff($event)">Run Diff</button>
+        
+        <table mat-table [dataSource]="changes" class="difftable">
+          <ng-container matColumnDef="name1">
+            <th mat-header-cell *matHeaderCellDef>File</th>
+            <td mat-cell *matCellDef="let item">{{item.name1 }}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="relativePath">
+              <th mat-header-cell *matHeaderCellDef>Path</th>
+              <td mat-cell *matCellDef="let item">{{item.relativePath}}</td>
+            </ng-container>
+
+          <ng-container matColumnDef="type2">
+            <th mat-header-cell *matHeaderCellDef>State</th>
+            <td mat-cell *matCellDef="let item">{{item.type2}}</td>
           </ng-container>
 
-        <ng-container matColumnDef="type2">
-          <th mat-header-cell *matHeaderCellDef>State</th>
-          <td mat-cell *matCellDef="let item">{{item.type2}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef>Action</th>
-          <td mat-cell *matCellDef="let item">
-            <div *ngIf="item.relativePath == '/intents'">
-              <button mat-raised-button color="primary" (click)="onClickLoadUserPhrases($event, item)">Load user phrases</button>
-            </div>
-          </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="diffCols"></tr>
-        <tr mat-row *matRowDef="let row; columns: diffCols;"></tr>
-      </table>
-
-      <h2>User Phrases</h2>
-      <ul>
-          <li *ngFor="let phrase of userphrases">
-            {{ phrase }}
-          </li>
-      </ul>
-      <hr>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let item">
+              <div *ngIf="item.relativePath == '/intents'">
+                <button mat-raised-button color="primary" (click)="onClickLoadUserPhrases($event, item)">Load user phrases</button>
+              </div>
+            </td>
+          </ng-container>
       
-      <h2>Test agent</h2>
-      <p>
-        Create unit tests, to run on diff. 
-      </p>
-
-  
-      <form role="addTestCase" [formGroup]="form" (ngSubmit)="addTestCase()">
-      <table class="testtable">
-          <thead>
-          <tr>
-            <th width="45%">Test Phrase</th>
-            <th width="20">Language</th>
-            <th>Expected</th>
-            <th>Detected</th>
-            <th width="50">Result</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let el of testData">
-            <td>{{ el.TEST_QUERY }}</td>
-            <td>{{ el.TEST_LANGUAGE }}</td>
-            <td>{{ el.EXPECTED_INTENT }}</td>
-            <td>{{ el.DETECTED_INTENT }}</td>
-            <td [className]="el.TEST_RESULT == 'TP' ||  el.TEST_RESULT == 'TN' ? 'green' : 'red'" class="center">{{ el.TEST_RESULT}}</td>
-          </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>
-                    <mat-form-field class="full-width">
-                        <input matInput id="testQuery" name="testQuery" formControlName="testQuery" type="text" autocomplete="off">
-                    </mat-form-field>
-                </td>
-                <td>
-                    <mat-form-field class="small">
-                        <mat-select formControlName="lang" required>
-                            <mat-option *ngFor="let lang of testLanguages" [value]="lang">
-                                {{lang}}
-                              </mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                </td>
-                
-                <td colspan="2">
-                    <mat-form-field class="full-width" name="intent">
-                        <mat-select formControlName="intent" required>
-                          <mat-option *ngFor="let intent of testIntents" [value]="intent.displayName">
-                            {{intent.displayName}}
-                          </mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                </td>
-                <td class="center">
-                    <button mat-raised-button color="primary" type="submit">Add</button>
-                </td>
-              </tr>
-        </tfoot>
+          <tr mat-header-row *matHeaderRowDef="diffCols"></tr>
+          <tr mat-row *matRowDef="let row; columns: diffCols;"></tr>
         </table>
-        </form>
 
+        <h2>User Phrases</h2>
+        <ul>
+            <li *ngFor="let phrase of userphrases">
+              {{ phrase }}
+            </li>
+        </ul>
+        <hr>
+        
+        <h2>Test agent</h2>
+        <p>
+          Create unit tests, to run on diff. 
+        </p>
 
-      <!--
-      <button mat-raised-button color="primary" (click)="onClickRunTestCases($event)" type="submit">Run unit tests</button>
-      -->
-      <!--<p>
-        Run regression tests.
-      </p>
-      <button mat-raised-button color="primary" type="submit">Run regression tests</button>
-    -->
     
+        <form role="addTestCase" [formGroup]="form" (ngSubmit)="addTestCase()">
+        <table class="testtable">
+            <thead>
+            <tr>
+              <th width="45%">Test Phrase</th>
+              <th width="20">Language</th>
+              <th>Expected</th>
+              <th>Detected</th>
+              <th width="50">Result</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let el of testData">
+              <td>{{ el.TEST_QUERY }}</td>
+              <td>{{ el.TEST_LANGUAGE }}</td>
+              <td>{{ el.EXPECTED_INTENT }}</td>
+              <td>{{ el.DETECTED_INTENT }}</td>
+              <td [className]="el.TEST_RESULT == 'TP' ||  el.TEST_RESULT == 'TN' ? 'green' : 'red'" class="center">{{ el.TEST_RESULT}}</td>
+            </tr>
+          </tbody>
+          <tfoot>
+              <tr>
+                  <td>
+                      <mat-form-field class="full-width">
+                          <input matInput id="testQuery" name="testQuery" formControlName="testQuery" type="text" autocomplete="off">
+                      </mat-form-field>
+                  </td>
+                  <td>
+                      <mat-form-field class="small">
+                          <mat-select formControlName="lang" required>
+                              <mat-option *ngFor="let lang of testLanguages" [value]="lang">
+                                  {{lang}}
+                                </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                  </td>
+                  
+                  <td colspan="2">
+                      <mat-form-field class="full-width" name="intent">
+                          <mat-select formControlName="intent" required>
+                            <mat-option *ngFor="let intent of testIntents" [value]="intent.displayName">
+                              {{intent.displayName}}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                  </td>
+                  <td class="center">
+                      <button mat-raised-button color="primary" type="submit">Add</button>
+                  </td>
+                </tr>
+          </tfoot>
+          </table>
+          </form>
+
+
+        <!--
+        <button mat-raised-button color="primary" (click)="onClickRunTestCases($event)" type="submit">Run unit tests</button>
+        -->
+        <!--<p>
+          Run regression tests.
+        </p>
+        <button mat-raised-button color="primary" type="submit">Run regression tests</button>
+      -->
+      
+      </div>
     </mat-card-content>
 </mat-card>
 
