--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -1,21 +1,19 @@
-.logout,
-.login {
+.logout-form,
+.login-form {
     position: absolute;
-    right: 5px;
-    top: 5px;
-    font-size: 50%;
+    right: 10px;
+    top: 10px;
 }
 
-.login .form-group{
-    float: left;
-    padding: 0 5px;
+.login-form .mat-form-field {
+    margin-right: 10px;
+    font-size: 60%;
+}
 
-    label {
-        padding-right: 5px;
+.logout-form {
+    font-size: 80%;
+    padding-top: 5px;
+    strong{
+        margin-right: 10px;
     }
-}
-
-.login button, .login i {
-    background: none;
-    border: none;
 }
